# zk_evm

./: Cargo.toml
end_to_end/: Cargo.toml  README.md  test_witness.json
end_to_end/src/: main.rs  mpt.rs  utils.rs
evm_arithmetization/: OutOfGasPrefundedContractCreation_d0g0v0_Shanghai.json  OutOfGasPrefundedContractCreation_d0g1v0_Shanghai.json  OutOfGasPrefundedContractCreation_d0g2v0_Shanghai.json  callcallcall_ABCB_RECURSIVE_d0g0v0_Shanghai.json  callcallcallcode_ABCB_RECURSIVE_d0g0v0_Shanghai.json  extCodeHashDeletedAccountCancun_d0g0v0_Shanghai.json  operationDiffGas_d10g0v0_Shanghai.json
evm_arithmetization/src/: fixed_recursive_verifier.rs  prover.rs
evm_arithmetization/src/cpu/columns/: mod.rs
evm_arithmetization/src/cpu/kernel/: interpreter.rs  mod.rs
evm_arithmetization/src/cpu/kernel/asm/: main.asm
evm_arithmetization/src/generation/: mod.rs  mpt.rs  state.rs  trie_extractor.rs
evm_arithmetization/src/memory/: columns.rs  memory_stark.rs
evm_arithmetization/src/witness/: memory.rs  traces.rs  transition.rs
evm_arithmetization/tests/: add11_yml.rs  erc20.rs  keccak_bomb.rs
mpt_trie/src/: lib.rs  special_query.rs  trie_ops.rs  trie_subsets.rs
trace_decoder/: Cargo.toml
trace_decoder/src/: decoding.rs  lib.rs  processed_block_trace.rs  types.rs
trace_decoder/src/compact/: compact_mpt_processing.rs  compact_prestate_processing.rs  compact_processing_common.rs  compact_smt_processing.rs  compact_to_mpt_trie.rs  compact_to_partial_trie.rs  complex_test_payloads.rs  mod.rs
