[package]
name = "end_to_end"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
ethereum-types = { workspace = true }
hex = { workspace = true }
anyhow = "1.0.82"
ciborium-io = "0.2.2"
ethers = "2.0.14"
itertools = "0.12.1"
tracing = "0.1.40"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.115"

# Local dependencies
mpt_trie = { path = "../mpt_trie" }
evm_arithmetization = { path = "../evm_arithmetization" }
trace_decoder = { path = "../trace_decoder" }
proof_gen = { path = "../proof_gen" }
